# FIM-PP

./: .gitignore  README.md  pyproject.toml
configs/data_generation/hawkes/: data_generation.yaml
notebooks/: example.ipynb  utils.py
scripts/: generate_dataset.py  inference.py  train_model.py
src/fim/: __init__.py  typing.py
src/fim/data/: config_dataclasses.py  dataloaders.py  datasets.py  tokenizers.py  utils.py
src/fim/data_generation/: data_saver.py
src/fim/data_generation/hawkes/: README.md  hawkes_simulation.py  kernel_functions.py  sampling_distributions.py  synthetic_dataset_generation.py
src/fim/data_generation/sde/: dynamical_systems.py  dynamical_systems_sample.py  dynamical_systems_target.py  dynamical_systems_to_files.py  gp_dynamical_systems.py  preprocess_utils.py
src/fim/models/: __init__.py  utils.py
src/fim/models/blocks/: __init__.py  base.py  denoising.py  neural_operators.py  normalization.py  positional_encodings.py
src/fim/models/hawkes/: __init__.py  hawkes.py  piecewise_intensity.py  thinning.py
src/fim/sampling/: grid_samplers.py  sde_path_samplers.py
src/fim/trainers/: checkpoint.py  evaluation_epochs.py  lr_warmup.py  mixed_precision.py  trainer.py  utils.py
src/fim/utils/: collate.py  evaluation.py  experiment_files.py  grids.py  helper.py  interpolator.py  logging.py  metrics.py  param_scheduler.py
