[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[project]
name = "fim"
version = "0.1.0"
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
   
]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10,<3.13"
dependencies = [
   "torch>=2.5.0",
   "transformers==4.46.0",
   "optree>=0.13.1",
   "datasets",
   "peft",
   "click",
   "numpy",
   "scipy",
   "pandas",
   "tqdm",
   "ipython",
   "matplotlib>=3.10.0",
   "ipympl",
   "seaborn",
   "tensorboard",
   "h5py",
   "optimum",
   "pyyaml",
   "jupyterlab",
   "ipywidgets",
   "pytest",
   "pytest-cov",
   "pytest-dependency",
   "python-dotenv",
   "tox",
   "pre_commit",
   "nbdime",
   "nbstripout",
   "sphinx",
   "recommonmark",
   "colorlog",
   "torchinfo",
   "ruff",
   "pytest-env",
   "pydantic",
   "torchsde>=0.2.6",
]


[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
env = ["PYTORCH_ENABLE_MPS_FALLBACK=1"]


[tool.ruff]
target-version = "py312"
line-length = 140

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823", "I001"]
select = ["C", "E", "F", "I", "W"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["fim"]


[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pylint]
disable = [
   "C0103", # Invalid variable name
   "C0114", # Missing module docstring

   #    "C0115",  # Missing class docstring
   #    "C0116",  # Missing function or method docstring
   #    "R0903",  # Too few public methods
   #    "R0913",  # Too many arguments
   #    "R0914",  # Too many local variables
   #    "R0915",  # Too many statements
]
max-line-length = 140
